*ovirt-engine-cli-3.2.0.7 (21 Jan 2013)
*ovirt-engine-cli-9999 (21 Jan 2013)

  21 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> +metadata.xml,
  +ovirt-engine-cli-3.2.0.7.ebuild, +ovirt-engine-cli-9999.ebuild:
  Initial import. Ebuild by me.