@@ -7,22 +7,12 @@ PYTHON_DEPEND="2:2.6"
 SUPPORT_PYTHON_ABIS="1"
 RESTRICT_PYTHON_ABIS="3.*"
 
-inherit distutils eutils
+inherit distutils eutils git-2
 
 DESCRIPTION="command line interface for the oVirt engine"
 HOMEPAGE="http://www.ovirt.org/wiki/CLI"
-SRC_URI=""
-
-case ${PV} in
-9999)
-	inherit autotools git-2
-	EGIT_REPO_URI="git://gerrit.ovirt.org/ovirt-engine-cli.git"
-	EGIT_BRANCH="master"
-	;;
-*)
-	SRC_URI="http://resources.ovirt.org/releases/${PV:0:3}/src/${P}.tar.gz"
-	;;
-esac
+EGIT_REPO_URI="git://gerrit.ovirt.org/ovirt-engine-cli.git"
+EGIT_BRANCH="master"
 
 LICENSE="Apache-2.0"
 SLOT="0"
@@ -35,17 +25,3 @@ RDEPEND="${DEPEND}
 		dev-python/kitchen
 		dev-python/pexpect
 		dev-python/ply"
-
-S="${WORKDIR}/${PN}"
-
-src_unpack() {
-	[[ ${PV} == "9999" ]] && git-2_src_unpack || default
-}
-
-src_compile() {
-	distutils_src_compile
-}
-
-src_install() {
-	distutils_src_install
-}
