@@ -1,3 +1,7 @@
+  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> metadata.xml,
+  ovirt-engine-cli-3.2.0.7.ebuild, ovirt-engine-cli-9999.ebuild:
+  fixups
+
 *ovirt-engine-cli-3.2.0.7 (21 Jan 2013)
 *ovirt-engine-cli-9999 (21 Jan 2013)
 
